/+/ добавил класс-заглушку вместо библиотеки CAN, линкуемый статически. Реализованы базовые виды функций библиотек и структур данных: заготовка перирдически вызываемой в реальном времени функции, заготовка функции-callback и очередь сообщений, предназначенная для обработки каждого вызванного callback библиотеки неспешно фоновым потоком программы без влияния на поток реального времени. Следующим этапом вынесу функцию реального времени из main в отдельный поток cactus_rt (SCHED_FIFO). + приложение canapp динамически линкуется с любой версией libccanopenmaster.so, главное, что бы публичный заголовок ccanopenmaster.h был соответвующим

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,5 +25,5 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 
 target_compile_options(
     canapp PRIVATE
-    -Wall -Wextra -pedantic -Werror
+    -Wall -Wextra -pedantic -Werror -Wno-unused-local-typedefs
 )
