/*/ initialize shared mutex and shared condition variable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,18 @@ cmake_minimum_required(VERSION 3.5)
 project(lesson_individual)
 
 add_executable(canapp canapp.cpp)
+add_executable(leading leading.cpp)
+
 target_include_directories(
     canapp PUBLIC
     "${CMAKE_CURRENT_SOURCE_DIR}/include"
     "${CMAKE_CURRENT_SOURCE_DIR}"
     "${CMAKE_CURRENT_SOURCE_DIR}/canopenmaster/include"
+)
+
+target_include_directories(
+    leading PUBLIC
+    "${CMAKE_CURRENT_SOURCE_DIR}/include"
 )
 
 set_target_properties(canapp PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
