--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/build/leading",
-            "args": [],
+            "program": "${workspaceFolder}/build/canapp",
+            "args": ["test","test"],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
